@@ -6,7 +6,7 @@ Requires Python 2.1 or newer.
 
 This file contains all the classes and helper functions specific to IPython.
 
-$Id: iplib.py 1002 2006-01-11 22:18:29Z fperez $
+$Id: iplib.py 1005 2006-01-12 08:39:26Z fperez $
 """
 
 #*****************************************************************************
@@ -70,7 +70,7 @@ from IPython.Itpl import Itpl,itpl,printpl,ItplNS,itplns
 from IPython.Logger import Logger
 from IPython.Magic import Magic
 from IPython.Prompts import CachedOutput
-from IPython.Struct import Struct
+from IPython.ipstruct import Struct
 from IPython.background_jobs import BackgroundJobManager
 from IPython.usage import cmd_line_usage,interactive_usage
 from IPython.genutils import *
